<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.android.countrain.TitleFragment"
        android:label="@string/title_nav_message"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment_to_homePageFragment"
            app:destination="@id/homePageFragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.android.countrain.QuestionFragment"
        android:label="@string/question_nav_message"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_questionFragment_to_finishFragment"
            app:destination="@id/finishFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_bottom" />
    </fragment>
    <fragment
        android:id="@+id/chooseFragment"
        android:name="com.android.countrain.ChooseFragment"
        android:label="@string/choose_nav_message"
        tools:layout="@layout/fragment_choose" >
        <action
            android:id="@+id/action_chooseFragment_to_questionFragment"
            app:destination="@id/questionFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_bottom" />
    </fragment>
    <fragment
        android:id="@+id/finishFragment"
        android:name="com.android.countrain.FinishFragment"
        android:label="@string/finish_nav_message"
        tools:layout="@layout/fragment_finish" >
        <action
            android:id="@+id/action_finishFragment_to_mistakesFragment2"
            app:destination="@id/mistakesFragment2"
            app:enterAnim="@anim/scale_in2"
            app:exitAnim="@anim/scale_out2" />
        <action
            android:id="@+id/action_finishFragment_to_homePageFragment"
            app:destination="@id/homePageFragment"
            app:enterAnim="@anim/scale_in"
            app:exitAnim="@anim/scale_out" />
    </fragment>
    <fragment
        android:id="@+id/mistakesFragment2"
        android:name="com.android.countrain.MistakesFragment"
        android:label="@string/mistakes_nav_message"
        tools:layout="@layout/fragment_mistakes" >
        <action
            android:id="@+id/action_mistakesFragment2_to_homePageFragment"
            app:destination="@id/homePageFragment"
            app:enterAnim="@anim/scale_in"
            app:exitAnim="@anim/scale_out" />
    </fragment>
    <fragment
        android:id="@+id/homePageFragment"
        android:name="com.android.countrain.HomePageFragment"
        android:label="@string/home_nav_message"
        tools:layout="@layout/fragment_home_page">
        <action
            android:id="@+id/action_homePageFragment_to_chooseFragment"
            app:destination="@id/chooseFragment"
            app:enterAnim="@anim/scale_in2"
            app:exitAnim="@anim/scale_out2" />
        <action
            android:id="@+id/action_homePageFragment_to_mistakesFragment2"
            app:destination="@id/mistakesFragment2"
            app:enterAnim="@anim/scale_in2"
            app:exitAnim="@anim/scale_out2" />
        <action
            android:id="@+id/action_homePageFragment_to_historyFragment"
            app:destination="@id/historyFragment"
            app:enterAnim="@anim/scale_in2"
            app:exitAnim="@anim/scale_out2" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.android.countrain.HistoryFragment"
        android:label="@string/history_nav_message">
        <action
            android:id="@+id/action_historyFragment_to_homePageFragment"
            app:destination="@id/homePageFragment"
            app:enterAnim="@anim/scale_in"
            app:exitAnim="@anim/scale_out" />
    </fragment>
</navigation>