<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.android.countrain.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TitleFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35
" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_message"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/big_font"
            android:fontFamily="@font/hphans_regular"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/usernamebox1"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/small_font"
            android:background="@drawable/inputbox"
            app:layout_constraintBottom_toTopOf="@+id/guideline44"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline44" />

        <EditText
            android:id="@+id/usernamebox"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:hint="@string/username"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/small_font"
            android:width="20dp"
            android:background="@null"
            android:maxLines="1"
            android:maxLength="20"
            app:layout_constraintBottom_toTopOf="@+id/guideline44"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline44"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/passwordbox1"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/small_font"
            android:background="@drawable/inputbox"
            app:layout_constraintBottom_toTopOf="@+id/guideline30"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline30" />

        <EditText
            android:id="@+id/passwordbox"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:hint="@string/password"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/small_font"
            android:background="@null"
            android:maxLines="1"
            android:maxLength="20"
            app:layout_constraintBottom_toTopOf="@+id/guideline30"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline30"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/button_type2"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_font"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline37"
            app:layout_constraintEnd_toStartOf="@+id/guideline45"

            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline37"
/>
        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/button_type2"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_font"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline37"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"

            app:layout_constraintStart_toStartOf="@+id/guideline45"
            app:layout_constraintTop_toTopOf="@+id/guideline37"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>